# f1-race-winner-predictor

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/f1_project/: cli.py
src/f1_project/data/: build_dataset.py
src/f1_project/models/: metrics.py  predict.py  train_eval.py
src/f1_project/utils/: features.py
